Feat: 캐싱 TTL 갱신 전략 및 최적화